--- a/Facebook Notifications/Base.lproj/MainMenu.xib
+++ b/Facebook Notifications/Base.lproj/MainMenu.xib
@@ -20,7 +20,7 @@
         </customObject>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6"/>
-        <window title="Facebook Notifications" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
+        <window title="Facebook Notifications" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="480" height="360"/>
@@ -42,6 +42,7 @@
             <connections>
                 <outlet property="delegate" destination="UZx-ZD-SYL" id="ey7-x4-0B0"/>
             </connections>
+            <point key="canvasLocation" x="293" y="264"/>
         </window>
     </objects>
 </document>
